# Nova-no-enc-chain-base-sdk-28

./: telegram_bot.py
.github/workflows/: build.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: companion.apk
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/cristal/bristral/tristal/mistral/: InstallActivity.kt  InstallReceiver.kt  LauncherApplication.kt  MainActivity.kt  SecondActivity.kt
app/src/main/java/com/cristal/bristral/tristal/mistral/service/: LauncherService.kt
app/src/main/res/values/: strings.xml  themes.xml
tools/: encrypt_companion.py
